--- a/web/app/index.html
+++ b/web/app/index.html
@@ -26,16 +26,6 @@
 
     <div ui-view></div>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
-
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -51,8 +41,11 @@
     <!-- endbuild -->
 
     <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="scripts/flashbandWebapp.js"></script>
-    <script src="scripts/main/main-ctrl.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="scripts/flashbandrest.factory.js"></script>
+    <script src="scripts/dashboard/dashboard.controller.js"></script>
+    <script src="scripts/authenticate/authenticate.service.js"></script>
+    <script src="scripts/authenticate/authenticate.controller.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
     <!-- endbuild -->
