inclusão do componente de upload na partial/enable-flashbands.html

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -48,6 +48,7 @@
     <script src="scripts/dashboard/dashboard.controller.js"></script>
     <script src="scripts/authenticate/authenticate.service.js"></script>
     <script src="scripts/authenticate/authenticate.controller.js"></script>
+    <script src="scripts/enable-flashbands/enable.flashbands.ctrl.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
     <!-- endbuild -->
