--- a/web/app/index.html
+++ b/web/app/index.html
@@ -45,6 +45,8 @@
 
     <!-- build:js({app,.tmp}) scripts/main.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/session.service.js"></script>
+    <script src="scripts/local.storage.service.js"></script>
     <script src="scripts/flashbandrest.factory.js"></script>
     <script src="scripts/dashboard/dashboard.controller.js"></script>
     <script src="scripts/authenticate/authenticate.service.js"></script>
