--- a/web/app/index.html
+++ b/web/app/index.html
@@ -45,12 +45,16 @@
 
     <!-- build:js({app,.tmp}) scripts/main.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/session.service.js"></script>
-    <script src="scripts/local.storage.service.js"></script>
-    <script src="scripts/flashbandrest.factory.js"></script>
+
+    <script src="scripts/flashband/flashband.rest.factory.js"></script>
+    <script src="scripts/flashband/flashband.storage.service.js"></script>
+    <script src="scripts/flashband/flashband.session.service.js"></script>
+
     <script src="scripts/dashboard/dashboard.controller.js"></script>
+
     <script src="scripts/authenticate/authenticate.service.js"></script>
     <script src="scripts/authenticate/authenticate.controller.js"></script>
+
     <script src="scripts/enable-flashbands/enable.flashbands.ctrl.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
