--- a/web/app/index.html
+++ b/web/app/index.html
@@ -59,6 +59,7 @@
     <script src="scripts/authenticate/authenticate.access.constant.js"></script>
 
     <script src="scripts/enable-flashbands/enable.flashbands.ctrl.js"></script>
+    <script src="scripts/showgoer/showgoer.ctrl.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
     <!-- endbuild -->
