--- a/web/app/index.html
+++ b/web/app/index.html
@@ -58,8 +58,8 @@
     <script src="scripts/authenticate/authenticate.controller.js"></script>
     <script src="scripts/authenticate/authenticate.access.constant.js"></script>
 
-    <script src="scripts/enable-flashbands/enable.flashbands.ctrl.js"></script>
-    <script src="scripts/showgoer/showgoer.ctrl.js"></script>
+    <script src="scripts/enable-flashbands/enable.flashbands.controller.js"></script>
+    <script src="scripts/showgoer/showgoer.controller.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
     <!-- endbuild -->
