Build otimized successfully

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -9,6 +9,9 @@
 
     <!-- build:css({.tmp,app}) styles/vendor.css -->
     <link rel="stylesheet" href="styles/vendor.css">
+
+    <!-- bower:css -->
+    <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:css({.tmp,app}) styles/main.css -->
