--- a/web/app/index.html
+++ b/web/app/index.html
@@ -50,10 +50,10 @@
     <!-- build:js({app,.tmp}) scripts/main.js -->
     <script src="scripts/app.js"></script>
 
-    <script src="scripts/flashband/flashband.rest.factory.js"></script>
     <script src="scripts/flashband/flashband.menu.directive.js"></script>
-    <script src="scripts/flashband/flashband.session.service.js"></script>
-    <script src="scripts/flashband/flashband.storage.service.js"></script>
+    <script src="scripts/flashband/flashband.rest.factory.js"></script>
+    <script src="scripts/flashband/flashband.session.factory.js"></script>
+    <script src="scripts/flashband/flashband.storage.factory.js"></script>
 
     <script src="scripts/dashboard/dashboard.controller.js"></script>
     <script src="scripts/dashboard/dashboard.abstract.constant.js"></script>
