--- a/web/app/index.html
+++ b/web/app/index.html
@@ -43,7 +43,6 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
-    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -54,6 +53,7 @@
     <script src="scripts/flashband/flashband.rest.factory.js"></script>
     <script src="scripts/flashband/flashband.session.factory.js"></script>
     <script src="scripts/flashband/flashband.storage.factory.js"></script>
+    <script src="scripts/flashband/flashband.api.server.constant.js"></script>
 
     <script src="scripts/dashboard/dashboard.controller.js"></script>
     <script src="scripts/dashboard/dashboard.abstract.constant.js"></script>
