Showgoer associate view

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -43,7 +43,6 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
-    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -61,6 +60,7 @@
     <script src="scripts/authenticate/authenticate.access.constant.js"></script>
     <script src="scripts/enable-flashbands/enable.flashbands.controller.js"></script>
     <script src="scripts/showgoer/showgoer.controller.js"></script>
+    <script src="scripts/associate/associate.controller.js"></script>
     <script src="scripts/showgoer/doc.types.constant.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
