--- a/web/app/index.html
+++ b/web/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" ng-app="flashbandWebapp">
   <head>
     <meta charset="utf-8">
-    <title>frontend</title>
+    <title>Flashband</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -43,7 +43,6 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
-    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
