--- a/web/app/index.html
+++ b/web/app/index.html
@@ -44,7 +44,6 @@
     <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
     <script src="bower_components/angular-ui-utils/keypress.js"></script>
-    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -56,6 +55,7 @@
     <script src="scripts/flashband/flashband.session.factory.js"></script>
     <script src="scripts/flashband/flashband.storage.factory.js"></script>
     <script src="scripts/flashband/flashband.api.server.constant.js"></script>
+    <script src="scripts/flashband/flashband.nfc.reader.constant.js"></script>
     <script src="scripts/dashboard/dashboard.controller.js"></script>
     <script src="scripts/dashboard/dashboard.abstract.constant.js"></script>
     <script src="scripts/authenticate/authenticate.controller.js"></script>
