--- a/web/app/index.html
+++ b/web/app/index.html
@@ -65,6 +65,7 @@
     <script src="scripts/showgoer/showgoer.controller.js"></script>
     <script src="scripts/showgoer/associate.controller.js"></script>
     <script src="scripts/showgoer/doc.types.constant.js"></script>
+    <script src="scripts/status/status.controller.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
     <!-- endbuild -->
