--- a/web/app/index.html
+++ b/web/app/index.html
@@ -48,6 +48,7 @@
     <script src="bower_components/angular-ui-utils/keypress.js"></script>
     <script src="bower_components/datatables/media/js/jquery.dataTables.js"></script>
     <script src="bower_components/angular-datatables/dist/angular-datatables.js"></script>
+    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
